Update response type
